# SwingBuddy

./: .env  .env.test  ARCHITECTURE.md  Cargo.toml  DATABASE_README.md  README.md  config.test.toml  config.toml.example
.sqlx/: query-2e0559dfcced98412cecb411519cd2a6a0a7f30e249a7d321994361aa8038ccb.json  query-3a20e53f40442d91aa2be13b9621cd3a6ba464da7a90ede56e2e063830cf6e53.json  query-525dbb73bc25d849e4f554724797f1fb20ceac063a5a39c939703ce8c96628b7.json  query-5711ab6538b39e1178cef81d721b4a44357e5c31f65115114d680070d71e4600.json  query-88fadd178018778b831f2bd3e5b2e988bccbed9d70c7ae1c0d792cd26aeed37f.json  query-a26c1eae7b54f36e1ec161436f2232a0089443a67f15d9a6f87df445e58ca19c.json  query-b819edabcb21a4768b9192f36f9010d9bde280ab7038070f1c83d7837caa1c12.json  query-bee6ef802ff8faf5c48a9ff63d593103399a9b4fd918658bbf726d4f54fe6682.json  query-c1f1dc4e8458e5da8f6336ac134c69f7495dab41c7a6b484d5990bf25b4cc3d1.json  query-c8f027a4764c4b6c17b74ab5e20d1f9ee1354b38840a208ecf9c3a2b289c3032.json  query-d742fdd72fbb196fd7873abad1bceb359a43dd83d46244df7e21c59a46be4b59.json
migrations/: 001_initial_schema.sql
scripts/: run_integration_tests.sh  run_tests.sh
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs  validation.rs
src/database/: connection.rs  mod.rs  service.rs
src/handlers/: mod.rs
src/i18n/: loader.rs  mod.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: admin.rs  event.rs  group.rs  mod.rs  user.rs
src/services/: auth.rs  cas.rs  google.rs  mod.rs  notification.rs  redis.rs  user.rs
src/state/: context.rs  mod.rs  scenarios.rs  storage.rs
src/utils/: errors.rs  helpers.rs  mod.rs  (+1 more)
tests/: README.md  comprehensive_integration_test.rs  integration_test.rs  minimal_test.rs  simple_integration_test.rs  test_infrastructure_only.rs
translations/: en.json  ru.json
(+34 files in other folders)
