[package]
name = "SwingBuddy"
version = "0.1.0"
edition = "2021"
authors = ["SwingBuddy Team"]
description = "A Telegram bot for swing dancing community management"
license = "MIT"

[dependencies]
# Telegram bot framework
teloxide = { version = "0.15.0", features = ["macros", "webhooks"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "fs"] }

# Database operations
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Redis caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration management
config = "0.14"
toml = "0.8"

# HTTP client for CAS API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Google Calendar API (optional, for future implementation)
# google-calendar3 = { version = "5.0", optional = true }

# Environment variables
dotenv = "0.15"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Rate limiting
governor = "0.6"

# JSON Web Tokens (for potential auth features)
jsonwebtoken = "9.2"

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.10"
urlencoding = "2.1.3"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
google-calendar = []
